--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,15 @@ body {
     padding: 0;
 }
 
+.footer-logo img {
+    width: 80px;
+    height: auto;
+    display: block;
+    margin: auto;
+    opacity: 0.8;
+}
+
+
 h1 {
     font-size: 2.5em;
     color: #222;
