--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ footer a:hover {
     }
 }
 
-.footer-icons {
+.footer-icons, .contact-icon {
     margin-top: 10px;
     display: flex;
     justify-content: center;
